1-cluster-setup/argocd/argocd-ingress.yaml
apiVersion: networking.k.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    # --- ADD THESE TWO ANNOTATIONS ---
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header "X-Robots-Tag" "noindex, nofollow";
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /robots.txt {
        add_header Content-Type text/plain;
        return 200 'User-agent: *\nDisallow: /';
      }
    # ---------------------------------

spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - gitops.axanth.gr
    secretName: argocd-server-tls
  rules:
  - host: gitops.axanth.gr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
